--- a/index.HTML
+++ b/index.HTML
@@ -6,7 +6,7 @@
     <p>my first paragraph.</p>
 
 </body>
-<script src="Users\Pablo\Desktop\esmeraldina programation\index.js"></script>
+<script src="Users\Pablo\Desktop\esmeraldina programation\index.js"></script>.
 
 </html>
 
